MB-49594: Remove useless 'pos' local var in CM::extractItemsToExpel

Change-Id: I777e770b3be3f42b087babc4e7d3452f31eb228f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/165991
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Paolo Cocchi <paolo.cocchi@couchbase.com>